--- a/Main.ipynb
+++ b/Main.ipynb
@@ -334,11 +334,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5240f7a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ عدد الصور لكل مرض (مرتبة من الأعلى للأقل):\n",
+      "\n",
+      "No Finding: 39302\n",
+      "Infiltration: 5270\n",
+      "Atelectasis: 2210\n",
+      "Effusion: 2086\n",
+      "Nodule: 1924\n",
+      "Pneumothorax: 1506\n",
+      "Mass: 1367\n",
+      "Pleural_Thickening: 875\n",
+      "Cardiomegaly: 746\n",
+      "Fibrosis: 648\n",
+      "Emphysema: 525\n",
+      "Consolidation: 346\n",
+      "Pneumonia: 176\n",
+      "Hernia: 98\n",
+      "Edema: 51\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. اقرأ الفايل\n",
+    "df_labels = pd.read_csv(r\"C:\\Users\\LENOVO\\Documents\\Lung\\chest-xray-diagnosis\\train_processed.csv\")  # عدلي الاسم حسب اللي عندك\n",
+    "\n",
+    "# 2. احسبي عدد الأمراض المشخّصة في كل صف\n",
+    "disease_cols = df_labels.columns[1:]  # أول عمود هو Image Index\n",
+    "df_labels['disease_count'] = df_labels[disease_cols].sum(axis=1)\n",
+    "\n",
+    "# 3. فلتر الصفوف اللي فيها مرض واحد فقط\n",
+    "df_single_disease = df_labels[df_labels['disease_count'] == 1].copy()\n",
+    "\n",
+    "# 4. احذف عمود العد (لو مش عايزاه)\n",
+    "df_single_disease.drop(columns='disease_count', inplace=True)\n",
+    "\n",
+    "# 5. احفظ الملف\n",
+    "df_single_disease.to_csv(\"single_disease_only.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "disease_counts = {\n",
+    "    col: int(df_single_disease[col].sum()) for col in disease_cols\n",
+    "}\n",
+    "\n",
+    "# 7. رتبيهم تنازليًا\n",
+    "sorted_counts = sorted(disease_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# 8. اطبعهم\n",
+    "print(\"✅ عدد الصور لكل مرض (مرتبة من الأعلى للأقل):\\n\")\n",
+    "for disease, count in sorted_counts:\n",
+    "    print(f\"{disease}: {count}\")"
+   ]
   }
  ],
  "metadata": {
